Add more Java samples and update the current ones